IGNITE-21230 Code cleanup.